generated-in/vanilla/dcimgui_nodefaultargfunctions_internal.h

typedef struct ImRect_t ImRect;            
typedef struct ImGuiWindow_t ImGuiWindow;                                    
struct ImRect_t
{
    ImVec2 Min;  
    ImVec2 Max;  
};
typedef enum
{
    ImGuiPlotType_Lines,
    ImGuiPlotType_Histogram,
} ImGuiPlotType;
struct ImGuiWindow_t
{
    ImGuiContext*            Ctx;                                             
    char*                    Name;                                            
    ImGuiID                  ID;                                              
    ImGuiWindowFlags         Flags;                                           
    ImGuiChildFlags          ChildFlags;                                      
    ImGuiViewportP*          Viewport;                                        
    ImVec2                   Pos;                                             
    ImVec2                   Size;                                            
    ImVec2                   SizeFull;                                        
    ImVec2                   ContentSize;                                     
    ImVec2                   ContentSizeIdeal;
    ImVec2                   ContentSizeExplicit;                             
    ImVec2                   WindowPadding;                                   
    float                    WindowRounding;                                  
    float                    WindowBorderSize;                                
    float                    TitleBarHeight, MenuBarHeight;                   
    float                    DecoOuterSizeX1, DecoOuterSizeY1;                
    float                    DecoOuterSizeX2, DecoOuterSizeY2;                
    float                    DecoInnerSizeX1, DecoInnerSizeY1;                
    int                      NameBufLen;                                      
    ImGuiID                  MoveId;                                          
    ImGuiID                  ChildId;                                         
    ImGuiID                  PopupId;                                         
    ImVec2                   Scroll;
    ImVec2                   ScrollMax;
    ImVec2                   ScrollTarget;                                    
    ImVec2                   ScrollTargetCenterRatio;                         
    ImVec2                   ScrollTargetEdgeSnapDist;                        
    ImVec2                   ScrollbarSizes;                                  
    bool                     ScrollbarX, ScrollbarY;                          
    bool                     ScrollbarXStabilizeEnabled;                      
    ImU8                     ScrollbarXStabilizeToggledHistory;               
    bool                     Active;                                          
    bool                     WasActive;
    bool                     WriteAccessed;                                   
    bool                     Collapsed;                                       
    bool                     WantCollapseToggle;
    bool                     SkipItems;                                       
    bool                     SkipRefresh;                                     
    bool                     Appearing;                                       
    bool                     Hidden;                                          
    bool                     IsFallbackWindow;                                
    bool                     IsExplicitChild;                                 
    bool                     HasCloseButton;                                  
    signed char              ResizeBorderHovered;                             
    signed char              ResizeBorderHeld;                                
    short                    BeginCount;                                      
    short                    BeginCountPreviousFrame;                         
    short                    BeginOrderWithinParent;                          
    short                    BeginOrderWithinContext;                         
    short                    FocusOrder;                                      
    ImGuiDir                 AutoPosLastDirection;
    ImS8                     AutoFitFramesX, AutoFitFramesY;
    bool                     AutoFitOnlyGrows;
    ImS8                     HiddenFramesCanSkipItems;                        
    ImS8                     HiddenFramesCannotSkipItems;                     
    ImS8                     HiddenFramesForRenderOnly;                       
    ImS8                     DisableInputsFrames;                             
    ImGuiWindowBgClickFlags  BgClickFlags : 8;                                
    ImGuiCond                SetWindowPosAllowFlags : 8;                      
    ImGuiCond                SetWindowSizeAllowFlags : 8;                     
    ImGuiCond                SetWindowCollapsedAllowFlags : 8;                
    ImVec2                   SetWindowPosVal;                                 
    ImVec2                   SetWindowPosPivot;                               
    ImVector_ImGuiID         IDStack;                                         
    ImGuiWindowTempData      DC;                                              
    ImRect                   OuterRectClipped;                                
    ImRect                   InnerRect;                                       
    ImRect                   InnerClipRect;                                   
    ImRect                   WorkRect;                                        
    ImRect                   ParentWorkRect;                                  
    ImRect                   ClipRect;                                        
    ImRect                   ContentRegionRect;                               
    ImVec2ih                 HitTestHoleSize;                                 
    ImVec2ih                 HitTestHoleOffset;
    int                      LastFrameActive;                                 
    float                    LastTimeActive;                                  
    ImGuiStorage             StateStorage;
    ImVector_ImGuiOldColumns ColumnsStorage;
    float                    FontWindowScale;                                 
    float                    FontWindowScaleParents;
    float                    FontRefSize;                                     
    int                      SettingsOffset;                                  
    ImDrawList*              DrawList;                                        
    ImDrawList               DrawListInst;
    ImGuiWindow*             ParentWindow;                                    
    ImGuiWindow*             ParentWindowInBeginStack;
    ImGuiWindow*             RootWindow;                                      
    ImGuiWindow*             RootWindowPopupTree;                             
    ImGuiWindow*             RootWindowForTitleBarHighlight;                  
    ImGuiWindow*             RootWindowForNav;                                
    ImGuiWindow*             ParentWindowForFocusRoute;                       
    ImGuiWindow*             NavLastChildNavWindow;                           
    ImGuiID                  NavLastIds[ImGuiNavLayer_COUNT];                 
    ImRect                   NavRectRel[ImGuiNavLayer_COUNT];                 
    ImVec2                   NavPreferredScoringPosRel[ImGuiNavLayer_COUNT];  
    ImGuiID                  NavRootFocusScopeId;                             
    int                      MemoryDrawListIdxCapacity;                       
    int                      MemoryDrawListVtxCapacity;
    bool                     MemoryCompacted;                                 
};
CIMGUI_API bool             ImGui_IsWindowChildOf(ImGuiWindow* window, ImGuiWindow* potential_parent, bool popup_hierarchy);
CIMGUI_API bool             ImGui_IsWindowInBeginStack(ImGuiWindow* window);
CIMGUI_API bool             ImGui_IsWindowWithinBeginStackOf(ImGuiWindow* window, ImGuiWindow* potential_parent);
CIMGUI_API bool             ImGui_IsWindowAbove(ImGuiWindow* potential_above, ImGuiWindow* potential_below);
CIMGUI_API bool             ImGui_IsWindowNavFocusable(ImGuiWindow* window);
CIMGUI_API bool   ImGui_IsWindowContentHoverable(ImGuiWindow* window, ImGuiHoveredFlags flags );
CIMGUI_API bool             ImGui_IsPopupOpenID(ImGuiID id, ImGuiPopupFlags popup_flags);
CIMGUI_API bool             ImGui_IsPopupOpenRequestForItem(ImGuiPopupFlags flags, ImGuiID id);
CIMGUI_API bool             ImGui_IsPopupOpenRequestForWindow(ImGuiPopupFlags flags);
CIMGUI_API bool          ImGui_IsNamedKey(ImGuiKey key);
CIMGUI_API bool          ImGui_IsNamedKeyOrMod(ImGuiKey key);
CIMGUI_API bool          ImGui_IsLegacyKey(ImGuiKey key);
CIMGUI_API bool          ImGui_IsKeyboardKey(ImGuiKey key);
CIMGUI_API bool          ImGui_IsGamepadKey(ImGuiKey key);
CIMGUI_API bool          ImGui_IsMouseKey(ImGuiKey key);
CIMGUI_API bool          ImGui_IsLRModKey(ImGuiKey key);
CIMGUI_API bool          ImGui_IsMouseDragPastThreshold(ImGuiMouseButton button, float lock_threshold );
CIMGUI_API bool ImGui_IsKeyDownID(ImGuiKey key, ImGuiID owner_id);
CIMGUI_API bool ImGui_IsKeyPressedImGuiInputFlags(ImGuiKey key, ImGuiInputFlags flags, ImGuiID owner_id );                  
CIMGUI_API bool ImGui_IsKeyReleasedID(ImGuiKey key, ImGuiID owner_id);
CIMGUI_API bool ImGui_IsKeyChordPressedImGuiInputFlags(ImGuiKeyChord key_chord, ImGuiInputFlags flags, ImGuiID owner_id );
CIMGUI_API bool ImGui_IsMouseDownID(ImGuiMouseButton button, ImGuiID owner_id);
CIMGUI_API bool ImGui_IsMouseClickedImGuiInputFlags(ImGuiMouseButton button, ImGuiInputFlags flags, ImGuiID owner_id );
CIMGUI_API bool ImGui_IsMouseReleasedID(ImGuiMouseButton button, ImGuiID owner_id);
CIMGUI_API bool ImGui_IsMouseDoubleClickedID(ImGuiMouseButton button, ImGuiID owner_id);
CIMGUI_API bool ImGui_IsDragDropActive(void);
CIMGUI_API bool ImGui_IsDragDropPayloadBeingAccepted(void);
CIMGUI_API bool                 ImGui_IsItemActiveAsInputText(void);                             
CIMGUI_API int ImGui_PlotEx(ImGuiPlotType plot_type, const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 size_arg);