generated-out/vanilla/dear-imgui-raw-vanilla-internal/cbits/DearImGuiWrappers.h

bool ImGui_ItemAdd_wrap(ImRect const* bb, ImGuiID id, const ImRect* nav_bb, ImGuiItemFlags extra_flags);
bool ImGui_ItemHoverable_wrap(ImRect const* bb, ImGuiID id, ImGuiItemFlags item_flags);
void ImGui_ItemSize_wrap(ImVec2 const* size, float text_baseline_y);
void ImGui_ItemSizeImRect_wrap(ImRect const* bb, float text_baseline_y);
int ImGui_PlotEx_wrap(ImGuiPlotType plot_type, const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* size_arg);