generated-out/vanilla/dear-imgui-raw-vanilla-internal/src/DearImGui/Raw/Internal/ImGui.hsc


-- C: bool ImGui::IsDragDropActive()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsDragDropActive"
  imGui_IsDragDropActive :: IO CBool
-- C: bool ImGui::IsDragDropPayloadBeingAccepted()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsDragDropPayloadBeingAccepted"
  imGui_IsDragDropPayloadBeingAccepted :: IO CBool
-- C: bool ImGui::IsGamepadKey(ImGuiKey key)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsGamepadKey"
  imGui_IsGamepadKey :: ImGuiKey -> IO CBool
-- C: bool ImGui::IsItemActiveAsInputText()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsItemActiveAsInputText"
  imGui_IsItemActiveAsInputText :: IO CBool
-- C: bool ImGui::IsKeyChordPressed(ImGuiKeyChord key_chord, ImGuiInputFlags flags, ImGuiID owner_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsKeyChordPressedImGuiInputFlags"
  imGui_IsKeyChordPressedImGuiInputFlags :: ImGuiKeyChord -> ImGuiInputFlags -> ImGuiID -> IO CBool
-- C: bool ImGui::IsKeyDown(ImGuiKey key, ImGuiID owner_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsKeyDownID"
  imGui_IsKeyDownID :: ImGuiKey -> ImGuiID -> IO CBool
-- C: bool ImGui::IsKeyPressed(ImGuiKey key, ImGuiInputFlags flags, ImGuiID owner_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsKeyPressedImGuiInputFlags"
  imGui_IsKeyPressedImGuiInputFlags :: ImGuiKey -> ImGuiInputFlags -> ImGuiID -> IO CBool
-- C: bool ImGui::IsKeyReleased(ImGuiKey key, ImGuiID owner_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsKeyReleasedID"
  imGui_IsKeyReleasedID :: ImGuiKey -> ImGuiID -> IO CBool
-- C: bool ImGui::IsKeyboardKey(ImGuiKey key)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsKeyboardKey"
  imGui_IsKeyboardKey :: ImGuiKey -> IO CBool
-- C: bool ImGui::IsLRModKey(ImGuiKey key)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsLRModKey"
  imGui_IsLRModKey :: ImGuiKey -> IO CBool
-- C: bool ImGui::IsLegacyKey(ImGuiKey key)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsLegacyKey"
  imGui_IsLegacyKey :: ImGuiKey -> IO CBool
-- C: bool ImGui::IsMouseClicked(ImGuiMouseButton button, ImGuiInputFlags flags, ImGuiID owner_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsMouseClickedImGuiInputFlags"
  imGui_IsMouseClickedImGuiInputFlags :: ImGuiMouseButton -> ImGuiInputFlags -> ImGuiID -> IO CBool
-- C: bool ImGui::IsMouseDoubleClicked(ImGuiMouseButton button, ImGuiID owner_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsMouseDoubleClickedID"
  imGui_IsMouseDoubleClickedID :: ImGuiMouseButton -> ImGuiID -> IO CBool
-- C: bool ImGui::IsMouseDown(ImGuiMouseButton button, ImGuiID owner_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsMouseDownID"
  imGui_IsMouseDownID :: ImGuiMouseButton -> ImGuiID -> IO CBool
-- C: bool ImGui::IsMouseDragPastThreshold(ImGuiMouseButton button, float lock_threshold)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsMouseDragPastThreshold"
  imGui_IsMouseDragPastThreshold :: ImGuiMouseButton -> CFloat -> IO CBool
-- C: bool ImGui::IsMouseKey(ImGuiKey key)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsMouseKey"
  imGui_IsMouseKey :: ImGuiKey -> IO CBool
-- C: bool ImGui::IsMouseReleased(ImGuiMouseButton button, ImGuiID owner_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsMouseReleasedID"
  imGui_IsMouseReleasedID :: ImGuiMouseButton -> ImGuiID -> IO CBool
-- C: bool ImGui::IsNamedKey(ImGuiKey key)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsNamedKey"
  imGui_IsNamedKey :: ImGuiKey -> IO CBool
-- C: bool ImGui::IsNamedKeyOrMod(ImGuiKey key)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsNamedKeyOrMod"
  imGui_IsNamedKeyOrMod :: ImGuiKey -> IO CBool
-- C: bool ImGui::IsPopupOpen(ImGuiID id, ImGuiPopupFlags popup_flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsPopupOpenID"
  imGui_IsPopupOpenID :: ImGuiID -> ImGuiPopupFlags -> IO CBool
-- C: bool ImGui::IsPopupOpenRequestForItem(ImGuiPopupFlags flags, ImGuiID id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsPopupOpenRequestForItem"
  imGui_IsPopupOpenRequestForItem :: ImGuiPopupFlags -> ImGuiID -> IO CBool
-- C: bool ImGui::IsPopupOpenRequestForWindow(ImGuiPopupFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsPopupOpenRequestForWindow"
  imGui_IsPopupOpenRequestForWindow :: ImGuiPopupFlags -> IO CBool
-- C: bool ImGui::IsWindowAbove(ImGuiWindow* potential_above, ImGuiWindow* potential_below)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsWindowAbove"
  imGui_IsWindowAbove :: (Ptr ImGuiWindow) -> (Ptr ImGuiWindow) -> IO CBool
-- C: bool ImGui::IsWindowChildOf(ImGuiWindow* window, ImGuiWindow* potential_parent, bool popup_hierarchy)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsWindowChildOf"
  imGui_IsWindowChildOf :: (Ptr ImGuiWindow) -> (Ptr ImGuiWindow) -> CBool -> IO CBool
-- C: bool ImGui::IsWindowContentHoverable(ImGuiWindow* window, ImGuiHoveredFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsWindowContentHoverable"
  imGui_IsWindowContentHoverable :: (Ptr ImGuiWindow) -> ImGuiHoveredFlags -> IO CBool
-- C: bool ImGui::IsWindowInBeginStack(ImGuiWindow* window)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsWindowInBeginStack"
  imGui_IsWindowInBeginStack :: (Ptr ImGuiWindow) -> IO CBool
-- C: bool ImGui::IsWindowNavFocusable(ImGuiWindow* window)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsWindowNavFocusable"
  imGui_IsWindowNavFocusable :: (Ptr ImGuiWindow) -> IO CBool
-- C: bool ImGui::IsWindowWithinBeginStackOf(ImGuiWindow* window, ImGuiWindow* potential_parent)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsWindowWithinBeginStackOf"
  imGui_IsWindowWithinBeginStackOf :: (Ptr ImGuiWindow) -> (Ptr ImGuiWindow) -> IO CBool
foreign import capi unsafe "DearImGuiWrappers.h ImGui_ItemAdd_wrap"
  c_imGui_ItemAdd :: (Ptr ImRect) -> ImGuiID -> (Ptr ImRect) -> ImGuiItemFlags -> IO CBool

imGui_ItemAdd :: ImRect -> ImGuiID -> (Ptr ImRect) -> ImGuiItemFlags -> IO CBool
imGui_ItemAdd bb id_ nav_bb extra_flags =
  with bb $ \_p0 -> c_imGui_ItemAdd _p0 id_ nav_bb extra_flags

foreign import capi unsafe "DearImGuiWrappers.h ImGui_ItemHoverable_wrap"
  c_imGui_ItemHoverable :: (Ptr ImRect) -> ImGuiID -> ImGuiItemFlags -> IO CBool

imGui_ItemHoverable :: ImRect -> ImGuiID -> ImGuiItemFlags -> IO CBool
imGui_ItemHoverable bb id_ item_flags =
  with bb $ \_p0 -> c_imGui_ItemHoverable _p0 id_ item_flags

foreign import capi unsafe "DearImGuiWrappers.h ImGui_ItemSize_wrap"
  c_imGui_ItemSize :: (Ptr ImVec2) -> CFloat -> IO ()

imGui_ItemSize :: ImVec2 -> CFloat -> IO ()
imGui_ItemSize size text_baseline_y =
  with size $ \_p0 -> c_imGui_ItemSize _p0 text_baseline_y

foreign import capi unsafe "DearImGuiWrappers.h ImGui_ItemSizeImRect_wrap"
  c_imGui_ItemSizeImRect :: (Ptr ImRect) -> CFloat -> IO ()

imGui_ItemSizeImRect :: ImRect -> CFloat -> IO ()
imGui_ItemSizeImRect bb text_baseline_y =
  with bb $ \_p0 -> c_imGui_ItemSizeImRect _p0 text_baseline_y
